--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,17 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+ @tailwind base;
+ @tailwind components;
+ @tailwind utilities;
 
 
-@layer components {
-  .cabecalho {
-    @apply  bg-gray-700 text-white h-20;
-    & nav{
-        @apply flex flex-row justify-around;
-        & a{
-            @apply block py-7 transition-all duration-300 ease-out hover:bg-white hover:text-black font-extrabold;
-        }
+@layer components{
+    .cabecalho{
+        @apply bg-gray-700 text-white h-20;
+        & nav{
+            @apply flex flex-row justify-around;
+            & a{
+               @apply block py-7 transition-all duration-300 hover:bg-white hover:text-black
+               font-extrabold;
+            }
+        } 
     }
-  }
 }
-
-
-
-
